# test_microservice

./: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  listener.py  producer.py  pyproject.toml  service.py  worker.py
